--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,5 @@
 *, *::after, *::before {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -24,6 +24,15 @@ input, button, select {
   padding: .5rem;
   border-radius: 0%;
   border: solid rgba(39, 39, 39, 0.39) 2px;
+}
+
+input {
+  padding: .5rem 1rem;
+}
+
+#suhu, .container, .info {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.123)), to(rgba(255, 255, 255, 0.075)));
+  background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.123), rgba(255, 255, 255, 0.075));
 }
 
 select:hover {
@@ -84,10 +93,11 @@ h1, select, option, button {
       -ms-flex-positive: 1;
           flex-grow: 1;
   margin-right: .5rem;
+  background-color: white;
 }
 
 .App .container div select {
-  width: 100px;
+  width: 110px;
 }
 
 .App #clear-all-input {
